--- a/Kaggle Housing price Prediction.ipynb
+++ b/Kaggle Housing price Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "04c09120",
+   "id": "29972b98",
    "metadata": {},
    "source": [
     "# House Price Prediction "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdd738a0",
+   "id": "09bb40fd",
    "metadata": {},
    "source": [
     "## Problem Statement:"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22c49ad2",
+   "id": "3df5eb60",
    "metadata": {},
    "source": [
     "Predict the house price using different features which effecting the price of a House"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83376996",
+   "id": "1a8c6f21",
    "metadata": {},
    "source": [
     "## Data fields"
@@ -34,91 +34,169 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df4b65e3",
+   "id": "ad2c1c81",
    "metadata": {},
    "source": [
     "Data fields\n",
     "\n",
-    "SalePrice : the property's sale price in dollars. This is the target variable that you're trying to predict.\\\n",
-    "MSSubClass: The building class\\\n",
-    "MSZoning: The general zoning classification\\\n",
-    "LotFrontage: Linear feet of street connected to property\\\n",
-    "LotArea: Lot size in square feet\\\n",
-    "Street: Type of road access\\\n",
-    "Alley: Type of alley access\\\n",
-    "LotShape: General shape of property\\\n",
-    "LandContour: Flatness of the property\\\n",
-    "Utilities: Type of utilities available\\\n",
-    "LotConfig: Lot configuration\\\n",
-    "LandSlope: Slope of property\\\n",
-    "Neighborhood: Physical locations within Ames city limits\\\n",
-    "Condition1: Proximity to main road or railroad\\\n",
-    "Condition2: Proximity to main road or railroad (if a second is present)\\\n",
-    "BldgType: Type of dwelling\\\n",
-    "HouseStyle: Style of dwelling\\\n",
-    "OverallQual: Overall material and finish quality\\\n",
-    "OverallCond: Overall condition rating\\\n",
-    "YearBuilt: Original construction date\\\n",
-    "YearRemodAdd: Remodel date\\\n",
-    "RoofStyle: Type of roof\\\n",
-    "RoofMatl: Roof material\\\n",
-    "Exterior1st: Exterior covering on house\\\n",
-    "Exterior2nd: Exterior covering on house (if more than one material)\\\n",
-    "MasVnrType: Masonry veneer type\\\n",
-    "MasVnrArea: Masonry veneer area in square feet\\\n",
-    "ExterQual: Exterior material quality\\\n",
-    "ExterCond: Present condition of the material on the exterior\\\n",
-    "Foundation: Type of foundation\\\n",
-    "BsmtQual: Height of the basement\\\n",
-    "BsmtCond: General condition of the basement\\\n",
-    "BsmtExposure: Walkout or garden level basement walls\\\n",
-    "BsmtFinType1: Quality of basement finished area\\\n",
-    "BsmtFinSF1: Type 1 finished square feet\\\n",
-    "BsmtFinType2: Quality of second finished area (if present)\\\n",
-    "BsmtFinSF2: Type 2 finished square feet\\\n",
-    "BsmtUnfSF: Unfinished square feet of basement area\\\n",
-    "TotalBsmtSF: Total square feet of basement area\\\n",
-    "Heating: Type of heating\\\n",
-    "HeatingQC: Heating quality and condition\\\n",
-    "CentralAir: Central air conditioning\\\n",
-    "Electrical: Electrical system\\\n",
-    "1stFlrSF: First Floor square feet\\\n",
-    "2ndFlrSF: Second floor square feet\\\n",
-    "LowQualFinSF: Low quality finished square feet (all floors)\\\n",
-    "GrLivArea: Above grade (ground) living area square feet\\\n",
-    "BsmtFullBath: Basement full bathrooms\\\n",
-    "BsmtHalfBath: Basement half bathrooms\\\n",
-    "FullBath: Full bathrooms above grade\\\n",
-    "HalfBath: Half baths above grade\\\n",
-    "Bedroom: Number of bedrooms above basement level\\\n",
-    "Kitchen: Number of kitchens\\\n",
-    "KitchenQual: Kitchen quality\\\n",
-    "TotRmsAbvGrd: Total rooms above grade (does not include bathrooms)\\\n",
-    "Functional: Home functionality rating\\\n",
-    "Fireplaces: Number of fireplaces\\\n",
-    "FireplaceQu: Fireplace quality\\\n",
-    "GarageType: Garage location\\\n",
-    "GarageYrBlt: Year garage was built\\\n",
-    "GarageFinish: Interior finish of the garage\\\n",
-    "GarageCars: Size of garage in car capacity\\\n",
-    "GarageArea: Size of garage in square feet\\\n",
-    "GarageQual: Garage quality\\\n",
-    "GarageCond: Garage condition\\\n",
-    "PavedDrive: Paved driveway\\\n",
-    "WoodDeckSF: Wood deck area in square feet\\\n",
-    "OpenPorchSF: Open porch area in square feet\\\n",
-    "EnclosedPorch: Enclosed porch area in square feet\\\n",
-    "3SsnPorch: Three season porch area in square feet\\\n",
-    "ScreenPorch: Screen porch area in square feet\\\n",
-    "PoolArea: Pool area in square feet\\\n",
-    "PoolQC: Pool quality\\\n",
-    "Fence: Fence quality\\\n",
-    "MiscFeature: Miscellaneous feature not covered in other categories\\\n",
-    "MiscVal: $Value of miscellaneous feature\\\n",
-    "MoSold: Month Sold\\\n",
-    "YrSold: Year Sold\\\n",
-    "SaleType: Type of sale\\\n",
-    "SaleCondition: Condition of sale\\"
+    "SalePrice : the property's sale price in dollars. This is the target variable that you're trying to predict.\n",
+    "\n",
+    "MSSubClass: The building class\n",
+    "\n",
+    "MSZoning: The general zoning classification\n",
+    "\n",
+    "LotFrontage: Linear feet of street connected to property\n",
+    "\n",
+    "LotArea: Lot size in square feet\n",
+    "\n",
+    "Street: Type of road access\n",
+    "\n",
+    "Alley: Type of alley access\n",
+    "\n",
+    "LotShape: General shape of property\n",
+    "\n",
+    "LandContour: Flatness of the property\n",
+    "\n",
+    "Utilities: Type of utilities available\n",
+    "\n",
+    "LotConfig: Lot configuration\n",
+    "\n",
+    "LandSlope: Slope of property\n",
+    "\n",
+    "Neighborhood: Physical locations within Ames city limits\n",
+    "\n",
+    "Condition1: Proximity to main road or railroad\n",
+    "\n",
+    "Condition2: Proximity to main road or railroad (if a second is present)\n",
+    "\n",
+    "BldgType: Type of dwelling\n",
+    "\n",
+    "HouseStyle: Style of dwelling\n",
+    "\n",
+    "OverallQual: Overall material and finish quality\n",
+    "\n",
+    "OverallCond: Overall condition rating\n",
+    "\n",
+    "YearBuilt: Original construction date\n",
+    "\n",
+    "YearRemodAdd: Remodel date\n",
+    "\n",
+    "RoofStyle: Type of roof\n",
+    "\n",
+    "RoofMatl: Roof material\n",
+    "\n",
+    "Exterior1st: Exterior covering on house\n",
+    "\n",
+    "Exterior2nd: Exterior covering on house (if more than one material)\n",
+    "\n",
+    "MasVnrType: Masonry veneer type\n",
+    "\n",
+    "MasVnrArea: Masonry veneer area in square feet\n",
+    "\n",
+    "ExterQual: Exterior material quality\n",
+    "\n",
+    "ExterCond: Present condition of the material on the exterior\n",
+    "\n",
+    "Foundation: Type of foundation\n",
+    "\n",
+    "BsmtQual: Height of the basement\n",
+    "\n",
+    "BsmtCond: General condition of the basement\n",
+    "\n",
+    "BsmtExposure: Walkout or garden level basement walls\n",
+    "\n",
+    "BsmtFinType1: Quality of basement finished area\n",
+    "\n",
+    "BsmtFinSF1: Type 1 finished square feet\n",
+    "\n",
+    "BsmtFinType2: Quality of second finished area (if present)\n",
+    "\n",
+    "BsmtFinSF2: Type 2 finished square feet\n",
+    "\n",
+    "BsmtUnfSF: Unfinished square feet of basement area\n",
+    "\n",
+    "TotalBsmtSF: Total square feet of basement area\n",
+    "\n",
+    "Heating: Type of heating\n",
+    "\n",
+    "HeatingQC: Heating quality and condition\n",
+    "\n",
+    "CentralAir: Central air conditioning\n",
+    "\n",
+    "Electrical: Electrical system\n",
+    "\n",
+    "1stFlrSF: First Floor square feet\n",
+    "\n",
+    "2ndFlrSF: Second floor square feet\n",
+    "\n",
+    "LowQualFinSF: Low quality finished square feet (all floors)\n",
+    "\n",
+    "GrLivArea: Above grade (ground) living area square feet\n",
+    "\n",
+    "BsmtFullBath: Basement full bathrooms\n",
+    "\n",
+    "BsmtHalfBath: Basement half bathrooms\n",
+    "\n",
+    "FullBath: Full bathrooms above grade\n",
+    "\n",
+    "HalfBath: Half baths above grade\n",
+    "\n",
+    "Bedroom: Number of bedrooms above basement level\n",
+    "\n",
+    "Kitchen: Number of kitchens\n",
+    "\n",
+    "KitchenQual: Kitchen quality\n",
+    "\n",
+    "TotRmsAbvGrd: Total rooms above grade (does not include bathrooms)\n",
+    "\n",
+    "Functional: Home functionality rating\n",
+    "Fireplaces: Number of fireplaces\n",
+    "\n",
+    "FireplaceQu: Fireplace quality\n",
+    "\n",
+    "GarageType: Garage location\n",
+    "\n",
+    "GarageYrBlt: Year garage was built\n",
+    "\n",
+    "GarageFinish: Interior finish of the garage\n",
+    "\n",
+    "GarageCars: Size of garage in car capacity\n",
+    "\n",
+    "GarageArea: Size of garage in square feet\n",
+    "\n",
+    "GarageQual: Garage quality\n",
+    "\n",
+    "GarageCond: Garage condition\n",
+    "\n",
+    "PavedDrive: Paved driveway\n",
+    "\n",
+    "WoodDeckSF: Wood deck area in square feet\n",
+    "\n",
+    "OpenPorchSF: Open porch area in square feet\n",
+    "\n",
+    "EnclosedPorch: Enclosed porch area in square feet\n",
+    "\n",
+    "3SsnPorch: Three season porch area in square feet\n",
+    "\n",
+    "ScreenPorch: Screen porch area in square feet\n",
+    "\n",
+    "PoolArea: Pool area in square feet\n",
+    "\n",
+    "PoolQC: Pool quality\n",
+    "\n",
+    "Fence: Fence quality\n",
+    "\n",
+    "MiscFeature: Miscellaneous feature not covered in other categories\n",
+    "\n",
+    "MiscVal: $Value of miscellaneous feature\n",
+    "\n",
+    "MoSold: Month Sold\n",
+    "\n",
+    "YrSold: Year Sold\n",
+    "\n",
+    "SaleType: Type of sale\n",
+    "\n",
+    "SaleCondition: Condition of sale."
    ]
   },
   {
@@ -583,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 459,
-   "id": "80e5fe00",
+   "id": "473469fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 460,
-   "id": "fb8719ff",
+   "id": "1dae4f39",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f85210e",
+   "id": "f0d6e272",
    "metadata": {},
    "source": [
     "# EDA"
@@ -623,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 533,
-   "id": "572840f2",
+   "id": "a565157d",
    "metadata": {
     "scrolled": true
    },
@@ -1176,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": 461,
-   "id": "6dcfcb82",
+   "id": "a5c046e5",
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": 462,
-   "id": "ffa655fe",
+   "id": "b68a0a9b",
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": 463,
-   "id": "cb8a3029",
+   "id": "e9b1ee1a",
    "metadata": {
     "scrolled": true
    },
@@ -1285,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 464,
-   "id": "c0dfac2a",
+   "id": "906a92cc",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": 465,
-   "id": "6290f6f7",
+   "id": "73b489b3",
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": 466,
-   "id": "7988050f",
+   "id": "695c7ecc",
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": 467,
-   "id": "64f8f62f",
+   "id": "8cb40bcb",
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1491,7 @@
   {
    "cell_type": "code",
    "execution_count": 468,
-   "id": "935f715d",
+   "id": "daf5def6",
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1523,7 @@
   {
    "cell_type": "code",
    "execution_count": 469,
-   "id": "3c81cb4e",
+   "id": "e897143c",
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": 470,
-   "id": "c927fcfe",
+   "id": "af0ca4fb",
    "metadata": {},
    "outputs": [
     {
@@ -1509,7 +1587,7 @@
   {
    "cell_type": "code",
    "execution_count": 471,
-   "id": "1cc28ae7",
+   "id": "ae7d10c9",
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1612,7 @@
   {
    "cell_type": "code",
    "execution_count": 472,
-   "id": "b5cb57bd",
+   "id": "78a426d2",
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bfbb1bf",
+   "id": "7d3443ba",
    "metadata": {},
    "source": [
     "# Pre Processing"
@@ -1576,7 +1654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3d0f71e",
+   "id": "560dac7c",
    "metadata": {},
    "source": [
     "## Missing Values Treatment"
@@ -1585,7 +1663,7 @@
   {
    "cell_type": "code",
    "execution_count": 473,
-   "id": "e4f56a71",
+   "id": "979a703d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1597,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": 474,
-   "id": "d5f2dcbe",
+   "id": "52d89e0a",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1699,7 @@
   {
    "cell_type": "code",
    "execution_count": 475,
-   "id": "0a02b604",
+   "id": "9808a214",
    "metadata": {},
    "outputs": [
     {
@@ -1668,7 +1746,7 @@
   {
    "cell_type": "code",
    "execution_count": 476,
-   "id": "525bcf16",
+   "id": "e5bc4bef",
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1779,7 @@
   {
    "cell_type": "code",
    "execution_count": 477,
-   "id": "76fd3b2b",
+   "id": "ebf80636",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1728,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 478,
-   "id": "075ecf73",
+   "id": "98d3261a",
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1827,7 @@
   {
    "cell_type": "code",
    "execution_count": 479,
-   "id": "33648c8a",
+   "id": "44c553d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1793,7 +1871,7 @@
   {
    "cell_type": "code",
    "execution_count": 480,
-   "id": "54539895",
+   "id": "c4a6043d",
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "185b22be",
+   "id": "3af24597",
    "metadata": {},
    "source": [
     "## Label Encoding"
@@ -1882,7 +1960,7 @@
   {
    "cell_type": "code",
    "execution_count": 481,
-   "id": "e4fc5f08",
+   "id": "905853d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1934,7 +2012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e72238ed",
+   "id": "30e924ff",
    "metadata": {},
    "source": [
     "## Feature Engineering"
@@ -1943,7 +2021,7 @@
   {
    "cell_type": "code",
    "execution_count": 482,
-   "id": "82a59e85",
+   "id": "afd199b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1972,7 +2050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37b1342b",
+   "id": "b5d719a3",
    "metadata": {},
    "source": [
     "To prevent Dummy Variable trap I'am dropping last column of the dummy columns\\\n",
@@ -1982,7 +2060,7 @@
   {
    "cell_type": "code",
    "execution_count": 483,
-   "id": "50d9aec1",
+   "id": "c5658ec4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2001,7 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": 484,
-   "id": "441e84f9",
+   "id": "cef5a8d3",
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "077635a9",
+   "id": "5c21e98e",
    "metadata": {},
    "source": [
     "## Feature Selection"
@@ -2039,7 +2117,7 @@
   {
    "cell_type": "code",
    "execution_count": 487,
-   "id": "6a5c669d",
+   "id": "3faa1085",
    "metadata": {},
    "outputs": [
     {
@@ -2076,7 +2154,7 @@
   {
    "cell_type": "code",
    "execution_count": 488,
-   "id": "7287e852",
+   "id": "13ed0702",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2190,7 @@
   {
    "cell_type": "code",
    "execution_count": 489,
-   "id": "99c8bae3",
+   "id": "720739fc",
    "metadata": {
     "scrolled": true
    },
@@ -2144,7 +2222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaaa2417",
+   "id": "3f85d7f1",
    "metadata": {},
    "source": [
     "## Fit Model"
@@ -2152,7 +2230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3410d765",
+   "id": "0bcf5d2e",
    "metadata": {},
    "source": [
     "### Linear Regression Model"
@@ -2211,7 +2289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c91abe3e",
+   "id": "b63d9b76",
    "metadata": {},
    "source": [
     "### Xgboost model"
@@ -2280,7 +2358,7 @@
   {
    "cell_type": "code",
    "execution_count": 529,
-   "id": "6e649296",
+   "id": "e500717c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2319,7 +2397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2480809e",
+   "id": "7f74d225",
    "metadata": {},
    "source": [
     "# Model Evaluation"
@@ -2328,7 +2406,7 @@
   {
    "cell_type": "code",
    "execution_count": 531,
-   "id": "eaad4bce",
+   "id": "abed0428",
    "metadata": {},
    "outputs": [
     {
@@ -2370,7 +2448,7 @@
   {
    "cell_type": "code",
    "execution_count": 532,
-   "id": "b7b9531e",
+   "id": "4627edd9",
    "metadata": {},
    "outputs": [
     {
@@ -2393,7 +2471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6486afda",
+   "id": "d3f23097",
    "metadata": {},
    "outputs": [],
    "source": []
