--- a/Kaggle Housing price Prediction.ipynb
+++ b/Kaggle Housing price Prediction.ipynb
@@ -2102,7 +2102,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "877af586",
+   "id": "a4f9603e",
    "metadata": {},
    "outputs": [
     {
@@ -2134,7 +2134,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "321639d1",
+   "id": "f1344e31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2146,7 +2146,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "20c9db62",
+   "id": "de50bc20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2157,7 +2157,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "f4df2cc4",
+   "id": "aaeba466",
    "metadata": {},
    "outputs": [
     {
@@ -2185,7 +2185,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "29427170",
+   "id": "ee4dc59b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2196,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "39826b2f",
+   "id": "cd0583ae",
    "metadata": {},
    "outputs": [
     {
@@ -2216,13 +2216,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5299fadf",
+   "id": "16e2ce59",
    "metadata": {},
    "source": [
-    "###### Not Using RFECV method becuse it's taking longtime to run\n",
-    "#Using Recursive feature elimination with cross-validation to select the number of features and \n",
-    "#Xgbregressor as estimator\n",
-    "#Negative mean sqaured error as scoring function.\n",
+    "#### Not Using RFECV method becuse it's taking longtime to run\n",
+    "Using Recursive feature elimination with cross-validation to select the number of features and\n",
+    "\n",
+    "Xgbregressor as estimator\n",
+    "\n",
+    "Negative mean sqaured error as scoring function.\n",
+    "\n",
     "estimator = XGBRegressor()\\\n",
     "selector = RFECV(estimator, cv = 3, n_jobs = -1, scoring =\"neg_mean_squared_error\")\\\n",
     "selector = selector.fit(X_train, y_train)\\\n",
@@ -2303,7 +2306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ad3356c",
+   "id": "88d7d039",
    "metadata": {},
    "source": [
     "### Multiple Linear Regression with Lasso Regularization"
@@ -2312,7 +2315,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "dbe9e3a9",
+   "id": "097834c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2322,7 +2325,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "6b3b30f5",
+   "id": "09936a8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2332,7 +2335,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "1bab92d8",
+   "id": "37d46b23",
    "metadata": {},
    "outputs": [
     {
@@ -2353,7 +2356,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "57ed708d",
+   "id": "155d3263",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2363,7 +2366,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "c6e94570",
+   "id": "7eb22d73",
    "metadata": {},
    "outputs": [
     {
@@ -2383,7 +2386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcca5258",
+   "id": "c9e19ce9",
    "metadata": {},
    "source": [
     "### Multiple Linear Regression with Ridge Regularization"
@@ -2392,7 +2395,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "4f25ab0a",
+   "id": "192aa904",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2402,7 +2405,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "f144f8e9",
+   "id": "873cf329",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2412,7 +2415,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "490ae0c2",
+   "id": "f62e044c",
    "metadata": {},
    "outputs": [
     {
@@ -2433,7 +2436,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "658ebda1",
+   "id": "ca901518",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2443,7 +2446,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "2b732eb6",
+   "id": "0c7308d2",
    "metadata": {},
    "outputs": [
     {
@@ -2463,7 +2466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8245c63",
+   "id": "76e216ad",
    "metadata": {},
    "source": [
     "### Multiple Linear Regression with Elasticnet"
@@ -2472,7 +2475,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "b8ff4216",
+   "id": "305895bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2482,7 +2485,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "efbcaf78",
+   "id": "0c73c896",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2492,7 +2495,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "ff357108",
+   "id": "0acadd4f",
    "metadata": {},
    "outputs": [
     {
@@ -2513,7 +2516,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "1fbf7ed6",
+   "id": "40d17b58",
    "metadata": {},
    "outputs": [
     {
@@ -2533,7 +2536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85a7da4b",
+   "id": "20ffae09",
    "metadata": {},
    "source": [
     "### KNeighborsRegressor"
@@ -2542,7 +2545,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "18041e82",
+   "id": "6f268449",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2552,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "9c53c4fc",
+   "id": "63c47868",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2562,7 +2565,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "179fa17e",
+   "id": "24e20160",
    "metadata": {},
    "outputs": [
     {
@@ -2583,7 +2586,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "485c8b43",
+   "id": "656be02c",
    "metadata": {},
    "outputs": [
     {
@@ -2603,7 +2606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ac5f8e9",
+   "id": "cd4b26b6",
    "metadata": {},
    "source": [
     "### Decision Tree Regressor"
@@ -2612,7 +2615,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "fb208589",
+   "id": "c1bd60c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2622,7 +2625,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "fddc99cf",
+   "id": "21bedf87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2632,7 +2635,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "c60f4beb",
+   "id": "bf4d2daa",
    "metadata": {},
    "outputs": [
     {
@@ -2653,7 +2656,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "62222d4d",
+   "id": "bdf3c727",
    "metadata": {},
    "outputs": [
     {
@@ -2674,7 +2677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af3f6a39",
+   "id": "9db437cc",
    "metadata": {},
    "source": [
     "### Enseble Techniques"
@@ -2682,7 +2685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a90e7ab9",
+   "id": "6e33a90d",
    "metadata": {},
    "source": [
     "### Bagging:"
@@ -2690,7 +2693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c44e3dcd",
+   "id": "4587c622",
    "metadata": {},
    "source": [
     "### RandomForestRegressor"
@@ -2699,7 +2702,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "caf84c5b",
+   "id": "8a6e6a8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2709,7 +2712,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "fd1cb8c7",
+   "id": "5eda0be6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2719,7 +2722,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "0e9c5b96",
+   "id": "102685d9",
    "metadata": {},
    "outputs": [
     {
@@ -2740,7 +2743,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "947eff6e",
+   "id": "ccd6e3b2",
    "metadata": {},
    "outputs": [
     {
@@ -2760,7 +2763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4153f3b",
+   "id": "5625aa0b",
    "metadata": {},
    "source": [
     "### Boosting:"
@@ -2768,7 +2771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8010a4eb",
+   "id": "7aae70ef",
    "metadata": {},
    "source": [
     "### Adaboost Regressor"
@@ -2777,7 +2780,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "50c3b5b1",
+   "id": "b7792503",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2787,7 +2790,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "b565fa22",
+   "id": "1df4ffcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2797,7 +2800,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "559fe578",
+   "id": "36de5ee4",
    "metadata": {},
    "outputs": [
     {
@@ -2818,7 +2821,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "741395f1",
+   "id": "b662b5c5",
    "metadata": {},
    "outputs": [
     {
@@ -2838,7 +2841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d468549",
+   "id": "abaad3af",
    "metadata": {},
    "source": [
     "### Gradient boosting"
@@ -2847,7 +2850,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "0d57f246",
+   "id": "48ec51eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2857,7 +2860,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "5f22dc6e",
+   "id": "1cc73d87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2867,7 +2870,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "043ebc91",
+   "id": "2d40f1c9",
    "metadata": {},
    "outputs": [
     {
@@ -2888,7 +2891,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "068b734a",
+   "id": "c1e06db9",
    "metadata": {},
    "outputs": [
     {
